--- a/backend/package.json
+++ b/backend/package.json
@@ -4,26 +4,27 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "test": "vitest"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
-    "prisma": "^5.13.0",
-    "@prisma/client": "^5.13.0"
+    "prisma": "^5.13.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.6.0",
-    "eslint": "^8.50.0",
-    "@typescript-eslint/parser": "^6.10.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.50.0",
     "prettier": "^3.0.0",
-    "vitest": "^1.4.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.0",
+    "vitest": "^1.4.0"
   }
 }
