--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     ports:
       - '4000:4000'
     volumes:
-      - ./backend:/app
-      - ./backend/prisma:/app/prisma
+      - ./backend:/app:cached
+      - ./backend/prisma:/app/prisma:cached
+      - ./backend/prisma/dev.db:/app/prisma/dev.db
     environment:
       - NODE_ENV=development
   frontend:
@@ -14,6 +15,6 @@ services:
     ports:
       - '5173:5173'
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app:cached
     environment:
       - NODE_ENV=development
