--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "postinstall": "tailwindcss -i ./src/index.css -o ./src/tailwind.css || true",
     "lint": "eslint . --ext .tsx,.ts",
     "test": "vitest"
   },
@@ -14,6 +15,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "axios": "^1.4.0",
+    "react-router-dom": "^6.14.1",
+  "tailwindcss": "^3.4.9",
+  "postcss": "^8.4.24",
+  "autoprefixer": "^10.4.14",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
