--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "install:all": "npm --prefix backend install && npm --prefix frontend install",
     "dev:backend": "npm --prefix backend run dev",
-    "dev:frontend": "npm --prefix frontend run dev"
+    "dev:frontend": "npm --prefix frontend run dev",
+    "e2e:install": "npm --prefix backend install && npm --prefix frontend install",
+    "e2e": "cucumber-js --require ./test/steps --require ./test/support --publish-quiet"
   }
 }
