--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "prisma": "^5.13.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.8.1",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.50.0",
