--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ES2020",
     "lib": ["DOM", "ES2020"],
     "jsx": "react-jsx",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+  "module": "ESNext",
+  "moduleResolution": "bundler",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
