--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
+  "start": "node dist/server.js",
     "lint": "eslint . --ext .ts",
     "test": "vitest"
   },
