--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
   "start": "node dist/server.js",
+  "migrate:ci": "DATABASE_URL=file:./test.db npx prisma migrate deploy",
+  "test:ci": "./ci/run_tests.sh",
     "lint": "eslint . --ext .ts",
     "test": "vitest"
   },
